--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -6,8 +6,6 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main>
-<!--         <h1>My Products</h1>
-        <p>List of all the products...</p> -->
         <% if (prods.length > 0) { %>
             <div class="grid">
                 <% for (let product of prods) { %>
@@ -16,7 +14,8 @@
                             <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
-                            <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                            <img src="<%= product.imageUrl %>"
+                                alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">$<%= product.price %></h2>
